# hasItPumped

./: .gitignore  README.md  TO_DO.md
.github/: CODEOWNERS
.github/workflows/: deploy.yml  pull_2  pull_2.yml  pull_requests.yml
analysis/: model.ubj  pre-post-modelling.ipynb  processed_mints.txt  requirements.txt
hasItPumped/: # To Do.md  init_database.py  start.sh
hasItPumped/backend/: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  fly.toml  gitleaks-report.json  main.py  pyproject.toml  render.yaml  requirements.txt  run.py  run_tests.sh  setup.py  vercel.json
hasItPumped/backend/docker/: Dockerfile
hasItPumped/backend/solana_token_api/: __init__.py  main.py
hasItPumped/backend/solana_token_api/models/: __init__.py  database.py  schema.py
hasItPumped/backend/solana_token_api/utils/: __init__.py  data_fetcher.py  database_utils.py  feature_engineering.py  logger.py  model_utils.py
hasItPumped/backend/src/solana_token_api/: __init__.py  initialise_local_dev_db.py  initialise_project.py  main.py
hasItPumped/backend/src/solana_token_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
hasItPumped/backend/src/solana_token_api/assets/: model.ubj
hasItPumped/backend/src/solana_token_api/models/: __init__.py  database.py  schema.py
hasItPumped/backend/src/solana_token_api/utils/: __init__.py  data_fetcher.py  database_utils.py  feature_engineering.py  logger.py  model_utils.py
hasItPumped/backend/tests/: __init__.py  conftest.py  test_api.py
hasItPumped/frontend/: next.config.ts  package-lock.json  package.json
hasItPumped/frontend/src/app/: layout.tsx  page copy.tsx  page.tsx  query-provider.tsx
hasItPumped/frontend/src/components/: CoinInfo.tsx  GeckoChart.tsx  RecentTokensSection.tsx  StatsSection.tsx  TokenChart.tsx
